infrastructure/network-policies/vault-allow.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-vault
  namespace: security
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: vault
  policyTypes:
    - Ingress
    - Egress
  ingress:
    - ports:
        - protocol: TCP
          port: 8200
  egress:
    - ports:
        - protocol: UDP
          port: 53
        - protocol: TCP
          port: 53
